[tool.poetry]
name = "wordle bot"
version = "1.0.0"
description = "A bot which solves Wordle."
authors = ["Jampamane <68441282+Jampamane@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.1"
selenium = "^4.22.0"
furo = "^2024.5.6"
sphinx = "^7.3.7"
argparse = "^1.4.0"
sphinxcontrib-napoleon = "^0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
