[project]
name = "wordle-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "rich>=14.0.0",
    "selenium>=4.31.0",
]

[project.scripts]
wordle_bot = "wordle_bot.__main__:solve"
wordle_bot_multi = "wordle_bot.wordle_multiprocess:process"

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.12",
    "mkdocstrings[python]>=0.29.1",
]

[tool.uv]
package = true
